fixed navbar bottom extra margin

--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -42,7 +42,7 @@
   
     .nav-links li {
       margin-right: 0;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       margin-top: 10px;
     }
   }
